ingress/path-based-routing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  
spec:
  rules:
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend: 
          service:
            name: product-service
            port:
              number: 80 
      - path: /user
        pathType: Prefix
        backend: 
          service:
            name: user-service
            port:
              number: 80  
      - path: /
        pathType: Prefix
        backend: 
          service:
            name: home-service
            port:
              number: 80
